<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My WatchList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>MyWatchList</item>
        <item>My Profile</item>
        <item>News Feed</item>
        <item>Browse</item>
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">

    </array>

    <!-- Content Description -->
    //Home Screen
    <string name="Home_head">Browse</string>
    <string name="showSearch">Search for shows</string>
    <string name="userSearch">Search for users</string>
    <string name="todayTitle">  Today</string>
    <string name="trendingTitle">  Trending</string>

    <string-array name="Hm_Titles">
        <item>Arrow</item>
        <item>Black-ish</item>
        <item>Constatine</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Gracepoint</item>
        <item>Lost</item>
        <item>Supernatural</item>
        <item>The Flash</item>
    </string-array>
    <string-array name="Hm_Description">
        <item>Description1</item>
        <item>Description2</item>
        <item>Description3</item>
        <item>Description4</item>
        <item>Description5</item>
        <item>Description6</item>
        <item>Description7</item>
        <item>Description8</item>
        <item>Description9</item>
    </string-array>

    <string name="hm_agenda_today">Today</string>
    <string name="LogIn">Log In</string>
    <string name="Remember">Remember me</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="addto">Add to</string>
    <string name="rate">Rate</string>
    <string name="title_activity_info_page">Summary</string>
    <string name="addepisode">Episode</string>
    <string name="genre">Genres:</string>
    <string name="genres">Action, Adventure, Crime</string>
    <string name="statusw">Status :</string>
    <string name="status">Airing </string>
    <string name="rating">Rating    :</string>

    <string name="progress">Progress    :</string>
    <string name="bprogress">Progress</string>
    // strings for Watchlist. DO NOT CHANGE!


    // strings for My Watchlist (list). DO NOT CHANGE!

    <string name="wl_title">My Watchlist</string>
    <string name="wl_message">Welcome to My Watchlist</string>
    <string name="wl_imageurl">http://i.imgur.com/ZNt7DXU.png</string>


    <string name="wl_tab1">Watching</string>
    <string name="wl_tab2">Completed</string>
    <string name="wl_tab3">Plan to watch</string>

    // END strings for My Watchlist (list)


    <string name="title_activity_main_main">MyWatchList</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="title_activity_browse">Browse</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="title_activity_dispatch">MyWatchList</string>
    <string name="title_activity_signup_or_login">SignupOrLogin</string>
    <string name="title_activity_sign_up_or_log_in">Sign Up Or LogIn</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Managing series made easy </string>
    <string name="title_activity_settings">Settings</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="title_activity_search">Search</string>
    <string name="popmenu_watching">Watching</string>
    <string name="popupmenu_plantowatch">Plan to watch</string>
    <string name="popupmenu_completed">Completed</string>
    <string name="remove_rating">Remove rating</string>
    <string name="very_bad">1 - Very bad</string>
    <string name="bad">2 - Bad</string>
    <string name="average">3 - Average</string>
    <string name="good">4 - Good</string>
    <string name="great">5 - Great</string>
    <string name="registreer">Register</string>

</resources>
