<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#5BC0EB">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <TextView
                style="@style/TitleView"
                android:gravity="left"
                android:id="@+id/title"
                android:paddingLeft="20dp"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="298dp"
                android:id="@+id/Image"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:paddingLeft="20dp"
                android:paddingTop="0dp"
                android:layout_below="@+id/title" />

            <Button
                style="@style/InfoButton"
                android:id="@+id/Baddto"
                android:onClick="showPopup"
                android:text="@string/addto"
                android:layout_toRightOf="@+id/Image"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="50dp"


                />

            <Button
                style="@style/InfoButton"
                android:id="@+id/Brate"
                android:text="@string/rate"
                android:layout_below="@+id/Baddto"
                android:layout_toRightOf="@+id/Image"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="30dp" />

            <Button
                style="@style/InfoButton"
                android:id="@+id/addepisode"
                android:text="@string/bprogress"
                android:layout_toRightOf="@+id/Image"
                android:layout_below="@+id/Brate"
                android:layout_marginLeft="20dp" />


            >

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/Tgenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:text="@string/genre"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/Tgenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@+id/Tgenre" />

            <TextView
                android:id="@+id/TStatusW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:paddingLeft="20dp"
                android:text="@string/statusw"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"

                android:layout_marginTop="50dp"
                android:layout_toRightOf="@+id/TStatusW" />

            <TextView
                android:id="@+id/TRatingW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:paddingLeft="20dp"
                android:text="@string/rating"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="77dp"
                android:layout_toRightOf="@+id/TRatingW"
                android:maxLength="3" />

            <TextView
                android:id="@+id/TProgressW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="93dp"
                android:paddingLeft="20dp"
                android:text="@string/progress"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="98dp"
                android:layout_toRightOf="@+id/TProgressW" />

        </RelativeLayout>

        <TextView
            android:id="@+id/plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp" />


    </LinearLayout>


</ScrollView>